Fixing spacing in home page

--- a/frontend/src/app/home/home.component.sass
+++ b/frontend/src/app/home/home.component.sass
@@ -7,3 +7,15 @@
 .statement h2
     font-size: 25px
     text-align: center
+
+.description h2
+    font-size: 25px
+    text-align: center
+
+.description ul 
+    text-align: center
+    padding-inline-start: 0
+
+mat-card
+    padding: 2em
+
